Our team section and fix cards

--- a/index.html
+++ b/index.html
@@ -142,30 +142,30 @@
                     <h3 class="section-subheading text-muted">Our product, GreenPath, took heavy inspiration from games such as Pokémon Go for the underlying mechanics that allows our game to be an attractive option as a health app.</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="card" style="width: 24rem;">
-                            <img src="assets/img/portfolio/1.jpg" class="card-img-top" alt="...">
+                    <div class="col-md-4 col-sm-6 col-12">
+                        <div class="card h-100">
+                            <img src="assets/img/pokedex.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Pokédex</h5>
                                 <p class="card-text">We have integrated a system similar to the pokédex from Pokémon Go into our app to encourage players to go out and capture pictures of the nature and wildlife in their local areas.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="card" style="width: 24rem;">
+                    <div class="col-md-4 col-sm-6 col-12">                        
+                        <div class="card h-100">
                             <img src="assets/img/portfolio/2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Daily Challenges</h5>
-                                <p class="card-text">Introducing players to daily challenges gives them short-term goals to work towards. Combined with increasing rewards from consecutive completions of daily challenges, players will build a routine of excercise.</p>
+                                <p class="card-text">Introducing players to daily challenges gives them short-term goals to work towards. Combined with increasing rewards from consecutive completions of daily challenges, players will build a routine of exercise.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="card" style="width: 24rem;">
+                    <div class="col-md-4 col-sm-6 col-12">                        
+                        <div class="card h-100">
                             <img src="assets/img/portfolio/3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Competition</h5>
+                                <p class="card-text">Our game includes regular competitions that allows our players to directly compete with each other on metrics such as distance walked or "pokédex" entries. This competition will encourage players to do more exercise.</p>
                             </div>
                         </div>
                     </div>
@@ -251,62 +251,56 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/marton.jpeg" alt="..." />
                             <h4>Marton Teli</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Business and Financial / Banner</p>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:marton.teli2@mail.dcu.ie" aria-label="Marton Teli Email"><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/Marton01980233720381783183246132849614" aria-label="Marton Teli Github"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Jake Lyons</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/liam.jpeg" alt="..." />
                             <h4>Liam Kelly</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">About Us / Our Product / Our Team</p>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:liam.kelly79@mail.dcu.ie" aria-label="Liam Kelly Email"><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/liam-kelly-024" aria-label="Liam Kelly Github"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/robert.jpeg" alt="..." />
                             <h4>Robert Remizov</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Market and Customer</p>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:robert.remizov2@mail.dcu.ie" aria-label="Robert Remizov Email"><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/roremi06" aria-label="Robert Remizov Github"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/gareth.jpeg" alt="..." />
                             <h4>Gareth Burke</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Landing</p>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:gareth.burke3@mail.dcu.ie" aria-label="Gareth Burke Email"><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/Garb-05" aria-label="Gareth Burke Email"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/blank-profile.webp" alt="..." />
+                            <h4>Jake Lyons</h4>
+                            <p class="text-muted">Resident Slacker</p>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label=""><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label=""><i class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/blank-profile.webp" alt="..." />
                             <h4>Chibuzor Owoamanam</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Resident Slacker</p>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label=""><i class="fa-solid fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label=""><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
                 </div>
