customer & market by RR

--- a/index.html
+++ b/index.html
@@ -242,6 +242,53 @@
                 </ul>
             </div>
         </section>
+
+        <!--Customer & Market-->
+        <section class="page-section bg-light">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Our Market and Customer Base</h2>
+                </div>
+                <div class="row pt-3 pb-5" style="background-color: rgb(235, 235, 235)">
+                    <h4 class="text-center">Target Market</h4>
+                    <div class="col-md-6 pt-4"><p class="text-center pt-3">The target audience of our product is gamers of all ages who wish to be active and go out more often but lack the motivation to 
+                        do so for whatever reason. However we will also try to include non-gamers who wish to be more active in our target audience 
+                        but we will try to focus a bit more on the gamer audience.</p>
+                    <p class="text-center">Our market size will be large, due to the substantial gamer audience on mobile platforms. The game will also attract a casual 
+                        fitness audience, which will contribute to an overall very large market size. We believe that these users are the ones that will take the majority of our userbase.</p></div>
+                    <div class="col-md-6"><img src="./assets/img/customermarket/customermarket1.jpg" class="rounded mx-auto d-block img-fluid"></div>
+                </div>
+                <br>
+                <div class="row pt-3 pb-5" style="background-color: rgb(235, 235, 235)">
+                    <h4 class="text-center">Competitor Analysis</h4>
+                    <div class="col-md-6">
+                        <div class="row-md-6 pt-3"><img src="./assets/img/customermarket/customermarket2.jpg" class="rounded mx-auto d-block img-fluid"></div>
+                        <div class="row-md-6 pt-5"><img src="./assets/img/customermarket/customermarket3.jpeg" class="rounded mx-auto d-block img-fluid"></div>
+                    </div>
+                    <div class="col-md-6 pt-4"><p class="text-center">
+                    Pokemon GO is by far our largest and most relevant competitor, as it fulfils similar needs as GreenPath. They are both 
+                    games with health elements, but the main difference between the two is our focus specifically on the health aspect of the 
+                    game. In our app, there are specific “fitness 
+                    based” events and challenges, which are missing from Pokemon GO.</p>
+                    <p class="text-center"> 
+                    Pokemon GO also has no way of urging the player to stay consistent with their fitness - this is an area we have innovated on 
+                    with our “streak” system, which will allow players to build up their streak every day, psychologically conditioning them to value 
+                    the streak they've invested so much time into. 
+                    All of these reasons set us apart from Pokemon GO, and make us much more health oriented, while still concealing the health 
+                    part enough with our game mechanics to attract a gamer audience. That is something that Pokemon GO was not able to do 
+                    properly in our opinion. 
+                    <p class="text-center">
+                    Built in health apps in smartphones have largely made the search for a health app obsolete, as they still track steps, activity 
+                    over time, and occasionally, like “Samsung Health”, provide small rewards in the form of badges or stickers which you can 
+                    assign to your profile, and share with your friends in a social system. This system works quite well in most situations, as the 
+                    social pressure of keeping up with friends can be enough to get someone outside and moving. 
+                    </p></div>
+                    
+                </div>
+                
+            </div>
+        </section>
+
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
