--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#market">Market</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Finance</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
